--- a/SearchRestaurant/Info.plist
+++ b/SearchRestaurant/Info.plist
@@ -4,6 +4,14 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>Privacy – Location Always Usage Description</key>
+	<string>アプリは常に位置情報を取得します</string>
+	<key>Privacy – When In Use Usage Description</key>
+	<string>アプリ使用中に位置情報を取得します</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
