--- a/SearchRestaurant/Info.plist
+++ b/SearchRestaurant/Info.plist
@@ -4,10 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<string></string>
 	<key>Privacy – Location Always Usage Description</key>
 	<string>アプリは常に位置情報を取得します</string>
 	<key>Privacy – When In Use Usage Description</key>
-	<string>アプリ使用中に位置情報を取得します</string>
+	<array/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>LSApplicationCategoryType</key>
